tests/ui/asm/riscv/bad-reg.riscv64gc_stable.stderr
error: invalid register `s1`: s1 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:43:18
   |
LL |         asm!("", out("s1") _);
   |                  ^^^^^^^^^^^

error: invalid register `fp`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:45:18
   |
LL |         asm!("", out("fp") _);
   |                  ^^^^^^^^^^^

error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:47:18
   |
LL |         asm!("", out("sp") _);
   |                  ^^^^^^^^^^^

error: invalid register `gp`: the global pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:49:18
   |
LL |         asm!("", out("gp") _);
   |                  ^^^^^^^^^^^

error: invalid register `tp`: the thread pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:51:18
   |
LL |         asm!("", out("tp") _);
   |                  ^^^^^^^^^^^

error: invalid register `zero`: the zero register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:53:18
   |
LL |         asm!("", out("zero") _);
   |                  ^^^^^^^^^^^^^

error[E0658]: register class `reg_pair` can only be used as a clobber in stable
  --> $DIR/bad-reg.rs:91:26
   |
LL |         asm!("/* {} */", in(reg_pair) pair); // requires asm_experimental_reg
   |                          ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: register class `reg_pair` can only be used as a clobber in stable
  --> $DIR/bad-reg.rs:95:26
   |
LL |         asm!("/* {} */", out(reg_pair) pair); // requires asm_experimental_reg
   |                          ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: register class `reg_pair` can only be used as a clobber in stable
  --> $DIR/bad-reg.rs:99:26
   |
LL |         asm!("/* {} */", out(reg_pair) _); // requires asm_experimental_reg
   |                          ^^^^^^^^^^^^^^^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:118:18
   |
LL |         asm!("", in("v0") x);
   |                  ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:121:18
   |
LL |         asm!("", out("v0") x);
   |                  ^^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:124:26
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                          ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:127:26
   |
LL |         asm!("/* {} */", out(vreg) _);
   |                          ^^^^^^^^^^^

error[E0658]: type `i128` cannot be used with this register class in stable
  --> $DIR/bad-reg.rs:91:39
   |
LL |         asm!("/* {} */", in(reg_pair) pair); // requires asm_experimental_reg
   |                                       ^^^^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: type `i128` cannot be used with this register class in stable
  --> $DIR/bad-reg.rs:95:40
   |
LL |         asm!("/* {} */", out(reg_pair) pair); // requires asm_experimental_reg
   |                                        ^^^^
   |
   = note: see issue #133416 <https://github.com/rust-lang/rust/issues/133416> for more information
   = help: add `#![feature(asm_experimental_reg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:118:27
   |
LL |         asm!("", in("v0") x);
   |                           ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:121:28
   |
LL |         asm!("", out("v0") x);
   |                            ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:124:35
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                                   ^
   |
   = note: register class `vreg` supports these types: 

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0658`.
